--- a/Index---index2.html
+++ b/Index---index2.html
@@ -672,7 +672,7 @@
                                                             var end_time=(new Date).getTime();
                                                             var yongshi=(end_time-start_time)/1000;
                                                             alert('用时'+yongshi+'秒');
-                                                            window.location.replace('/index.html');                                                            
+                                                            window.location.replace('./index.html');                                                            
                                                         });  
         </script>
         <script src="https://www.layuicdn.com/layui-v2.5.6/layui.js"></script>
