--- a/jnlyey.html
+++ b/jnlyey.html
@@ -518,7 +518,7 @@ sup {
 
 <script type="text/javascript">top.$.jBox.closeTip();</script>
 
-<form id="inputForm" class="form-horizontal" action="http://123.57.213.254:808/f/signup/signupfor/save" method="post" enctype="multipart/form-data" novalidate="novalidate">
+<form id="inputForm" class="form-horizontal" action="/f/signup/signupfor/save" method="post" enctype="multipart/form-data" novalidate="novalidate">
 		<input id="id" name="id" type="hidden" value="">
 		<table class="table table-bordered  table-condensed dataTables-example dataTable no-footer">
 		   <tbody>
