--- a/jsq.html
+++ b/jsq.html
@@ -4,10 +4,10 @@
    
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
  
-  <link rel="stylesheet" type="text/css" href="./js/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="./js/style_diy.css">
-  <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="./jsjsq/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./jsjsq/style_diy.css">
+  <script type="text/javascript" src="./jsjsq/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="./jsjsq/bootstrap.min.js"></script>
   
 
 
