--- a/daming.html
+++ b/daming.html
@@ -5,9 +5,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>大名县幼儿园网上报名系统-在线报名系统</title>
-<link rel="stylesheet" href="/daming/layui.css">
-<link rel="stylesheet" type="text/css" href="/daming/webuploader.css">
-<link rel="stylesheet" href="/daming/style.css">
+<link rel="stylesheet" href="./daming/layui.css">
+<link rel="stylesheet" type="text/css" href="./daming/webuploader.css">
+<link rel="stylesheet" href="./daming/style.css">
 <style type="text/css">
 .red{color: red;}
 .layui-select-group dt{padding-left: 20px!important;font-size: 15px!important;}
